# tableau-playwrite

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.codex/: config.toml
scripts/: tableau_login.py
tableau_operator/: __init__.py  audit.py  config.py  executor.py  hyper_service.py  mcp_server.py  metadata.py  models.py  planner.py  playwright_driver.py  safety.py  tableau_rest.py  tools.py  ui_snapshot.py
tests/: test_config.py  test_models.py  test_planner_safety.py  test_playwright_driver.py  test_rest_and_tools.py  test_ui_snapshot.py
wiki/: SCHEMA.md  index.md  log.md
wiki/api/: Contratti_MCP_Tableau_Operator.md
wiki/implementations/: Implementazione_Tableau_MCP_Operator.md
wiki/overviews/: Tableau_MCP_Operator.md
wiki/tests/: Risultati_Test_Tableau_MCP_Operator.md
